# tradefun

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
bank_integration/: __init__.py
data/tbank/: shares.json
docs/: algo_overview.md
integrations/: __init__.py
integrations/common/: base_client.py  utils.py
integrations/tbank/: client.py  containers.py
integrations/tbank/rest_api/: INSTRUMENTS_README.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  instruments_examples.py  requirements.txt  samples.py  tbank_instruments_service.py
scripts/: load_from_env_file.py  python_env.sh
trading_strategies/: __init__.py
